# reddit-stock-ai-agent-recommendation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: daily-performance.yml  reddit-stock-weekly.yml  weekly-trade.yml
alembic/: env.py
alembic/versions/: 34a8ad64d277_add_reddit_posts_table.py  354e0b79774b_remove_test_table.py  5516c9b83c12_add_trade_db_models.py  5aff9101192a_add_test_table.py  600807f306a9_update_trade_input_fields_to_jsonb.py  6800764bdeea_add_a_reddit_id_col_to_reddit_posts_and_.py  82eb3697e01a_add_final_recommendations.py  86ff6a5d75f1_add_portfolio_plans_table.py  8be02617122d_add_trade_inputs.py  8dab605a59a6_add_three_recommendation_tables.py  8fb2bfe1a4f3_add_reddit_filtered_posts_table.py  915fd085cdaa_update_reddit_posts_table_cols.py  a6e61b3c5046_add_financial_snapshots_table.py  db430518ad64_reddit_posts_id_to_integer_autoinc.py  efb7a5d8eaa5_add_run_metadata.py  f940555e705d_reddit_filterd_posts_id_to_integer_.py
debug/: portfolioplanneragent_1757197612.json
docs/: TABLES.md
stock_ai/: main.py  main_daily_performance.py  main_trade.py
stock_ai/agents/: base_agent.py  dd_agent.py  news_agent.py  pydantic_models.py  yolo_agent.py
stock_ai/db/: base.py  session.py
stock_ai/reddit/: post_scrape_filter.py  reddit_scraper.py  types.py
stock_ai/sentiment/: __init__.py  adanos_client.py  enricher.py
stock_ai/workflows/: daily_performance_workflow.py  reddit_stock_workflow.py  run_id_generator.py  weekly_trade_workflow.py  workflow_base.py
stock_ai/yahoo_finance/: types.py  yahoo_finance_client.py
(+43 files in other folders)
